Improve logging (part 1)

--- a/config.ini
+++ b/config.ini
@@ -63,6 +63,16 @@ request_handler = fastcgi
 ; Path to application to load
 path = ./cmake-build-debug/libnawatest.so
 
+[logging]
+; Log level
+; default value: informational
+; possible values: off, error, warning, informational, debug
+level = informational
+; Use systemd-style extended log messages in the format {date} {time} {hostname} {process}[{PID}]: {message}
+; Turn off when using systemd, as systemd extends them itself.
+; Default: off
+extended = off
+
 [session]
 ; Name of the session cookie
 ; default value: SESSION
