--- a/systemd/nawa@.service
+++ b/systemd/nawa@.service
@@ -5,6 +5,7 @@ After=syslog.target network.target
 [Service]
 Type=simple
 ExecStart=nawarun "%I"
+ExecReload=kill -HUP $MAINPID
 Restart=always
 
 [Install]
