--- a/include/Application.h.in
+++ b/include/Application.h.in
@@ -27,7 +27,7 @@
 #define NAWA_VERSION_MAJOR @NAWA_VERSION_MAJOR@
 #define NAWA_VERSION_MINOR @NAWA_VERSION_MINOR@
 
-#include <nawa/Connection.h>
+#include <nawa/connection/Connection.h>
 #include <nawa/AppInit.h>
 
 extern "C" const int nawa_version_major = NAWA_VERSION_MAJOR;
