--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -2029,7 +2029,7 @@ ENABLE_PREPROCESSING   = YES
 # The default value is: NO.
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
-MACRO_EXPANSION        = NO
+MACRO_EXPANSION        = YES
 
 # If the EXPAND_ONLY_PREDEF and MACRO_EXPANSION tags are both set to YES then
 # the macro expansion is limited to the macros specified with the PREDEFINED and
@@ -2037,7 +2037,7 @@ MACRO_EXPANSION        = NO
 # The default value is: NO.
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
-EXPAND_ONLY_PREDEF     = NO
+EXPAND_ONLY_PREDEF     = YES
 
 # If the SEARCH_INCLUDES tag is set to YES, the include files in the
 # INCLUDE_PATH will be searched if a #include is found.
@@ -2069,7 +2069,12 @@ INCLUDE_FILE_PATTERNS  =
 # recursively expanded use the := operator instead of the = operator.
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
-PREDEFINED             =
+PREDEFINED             = "NAWA_DEFAULT_DESTRUCTOR_DEF(Class)=virtual ~Class()" \
+                         "NAWA_DEFAULT_CONSTRUCTOR_DEF(Class)=Class()" \
+                         "NAWA_COPY_CONSTRUCTOR_DEF(Class)=Class(Class const &other)" \
+                         "NAWA_COPY_ASSIGNMENT_OPERATOR_DEF(Class)=Class &operator=(const Class &other)" \
+                         "NAWA_MOVE_CONSTRUCTOR_DEF(Class)=Class(Class &&other) noexcept" \
+                         "NAWA_MOVE_ASSIGNMENT_OPERATOR_DEF(Class)=Class &operator=(Class &&other) noexcept"
 
 # If the MACRO_EXPANSION and EXPAND_ONLY_PREDEF tags are set to YES then this
 # tag can be used to specify a list of macro names that should be expanded. The
