--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -2070,6 +2070,7 @@ INCLUDE_FILE_PATTERNS  =
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
 PREDEFINED             = "NAWA_DEFAULT_DESTRUCTOR_DEF(Class)=virtual ~Class()" \
+                         "NAWA_DEFAULT_DESTRUCTOR_OVERRIDE_DEF(Class)=~Class() override" \
                          "NAWA_DEFAULT_CONSTRUCTOR_DEF(Class)=Class()" \
                          "NAWA_COPY_CONSTRUCTOR_DEF(Class)=Class(Class const &other)" \
                          "NAWA_COPY_ASSIGNMENT_OPERATOR_DEF(Class)=Class &operator=(const Class &other)" \
