Various refactorings, improvements, and fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,6 +115,7 @@ set(NAWA_FILES
         libs/inih/ini.c
         libs/inih/ini.h
 
+        src/AppInit.cpp
         src/RequestHandler/RequestHandler.cpp
         src/RequestHandler/impl/FastcgiRequestHandler.cpp
         src/RequestHandler/impl/HttpRequestHandler.cpp
