Update explanation for session cookies in config

--- a/config.ini
+++ b/config.ini
@@ -82,7 +82,7 @@ cookie_name = SESSION
 ; - properties defined here
 ; - (lowest) Connection::setCookiePolicy(Cookie)
 ; -> boolean properties (Secure, HttpOnly): will be set if true/on anywhere,
-;    integral properties (SameSite, Max-Age): value with highest precedence that is >0 will be taken
+;    integral properties (SameSite, Max-Age): value with highest precedence that is set will be taken
 
 ; Enable this option if session cookies may only be sent via secure (HTTPS) connections. Sessions will not work on
 ; unencrypted (HTTP) connections if this option is set to on.
@@ -97,7 +97,6 @@ cookie_httponly = on
 ; default value: strict
 ; possible values: strict, lax, off
 cookie_samesite = strict
-
 ; Set this to off if the cookie should not include an explicit Expires and Max-Age property (according to keepalive)
 ; (the browser will then delete it when it closes)
 ; WARNING: CookiePolicy sets absolute values for Expires and Max-Age and might make proper session handling impossible,
