Tidy up nawarun main, add config option for termination timeout

--- a/config.ini
+++ b/config.ini
@@ -54,6 +54,10 @@ concurrency = hardware
 ; number of threads, absolute (fixed concurrency) or relative (threads*hardware_concurrency) (double)
 ; default value: 1.0
 threads = 1.0
+; after receiving a SIGTERM, SIGINT, or SIGUSR1, enforce termination (ignoring pending requests) after the given number
+; of seconds
+; default value: 10
+termination_timeout = 10
 ; Request handler to use
 ; default value: fastcgi
 ; possible values: fastcgi, http (the latter one should be used for development purposes only)
